@@ -1,15 +1,14 @@
 package com.hts.htsApp.model;
 
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
+import jakarta.persistence.*;
 import lombok.Getter;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Entity
@@ -24,19 +23,34 @@ public class User implements UserDetails {
     @Setter
     @Getter
     private String password;
-    private String empresa;
+    @ManyToOne
+    @JoinColumn(name = "empresa_id")
+    @Getter
+    @Setter
+    private Empresa empresa;
+    @Getter
+    @Setter
+    private String role = "USER"; // default role
 
-    public User(String username, String password, String empresa) {
+    public User(String username, String password, Empresa empresa) {
         this.username = username;
         this.password = password;
         this.empresa = empresa;
+    }
+
+    public User(String username, String password, Empresa empresa, String role) {
+        this.username = username;
+        this.password = password;
+        this.empresa = empresa;
+        this.role = role;
     }
 
     public User(){}
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        // Return a single role as a Spring Security authority (ROLE_<role>)
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + (this.role == null ? "USER" : this.role)));
     }
 
     @Override
@@ -64,11 +78,4 @@ public class User implements UserDetails {
         return UserDetails.super.isEnabled();
     }
 
-    public String getEmpresa() {
-        return this.empresa;
-    }
-
-    public void setEmpresa(String empresa) {
-        this.empresa = empresa;
-    }
 }
